Commit 7 - Corrected the Waiting for GPS signal code to reflect more accurately the status of the signal.

--- a/res/layout/animations_main_screen.xml
+++ b/res/layout/animations_main_screen.xml
@@ -72,7 +72,7 @@
 		android:layout_height="wrap_content"
 		android:layout_alignTop ="@+id/digit2Bottom"
 		android:layout_alignLeft="@+id/digit2Bottom"
-		android:visibility="gone"/>	
+		android:visibility="visible"/>	
 			
 	</RelativeLayout>
 	
